--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: [ "2.6", "2.7" ]
+        ruby-version: [ "2.6", "2.7", "3.0" ]
 
     steps:
       - name: Checkout
